<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:backgroundTint="@color/colorSecondary"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/tasksHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/tasks"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="14dp"
        android:layout_centerHorizontal="true"
        android:textSize="36sp" />

    <Button
        android:id="@+id/sortButton"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:textSize="11sp"
        android:text="@string/sort_by_priority"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/montserrat"
        android:layout_marginStart="240dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tasksHeading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/sortButton"
        android:layout_marginTop="-4dp"
        android:padding="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorAccent"
        android:background="@color/colorAccent"
        android:src="@drawable/baseline_add_24"
        android:contentDescription="@string/add_todo" />

</RelativeLayout>
